# bunkr-uploader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
bunkrr_uploader/: api.py  args.py  cli.py  logger.py  main.py  uploader.py
bunkrr_uploader/api/: __init__.py  api.py  files.py  responses.py
bunkrr_uploader/api/types/: custom_types.py  files.py  responses.py
bunkrr_uploader/client/: __init__.py  errors.py  uploader.py
bunkrr_uploader/types/: files.py  responses.py
src/bunkr/: __init__.py  __main__.py  aio.py  client.py  config.py  logger.py  progress.py
src/bunkr/api/: __init__.py  album.py  errors.py  file.py  upload.py
src/bunkr_uploader/: __init__.py  __main__.py  client.py  config.py  logger.py  main.py  progress.py
src/bunkr_uploader/api/: __init__.py  _exceptions.py  _files.py  _responses.py  errors.py  file.py  responses.py
