[tool.poetry]
name = "bunkrr-uploader"
version = "0.1.0"
description = "Async Bunkrr uploader"
authors = ["NTFSvolume"]
license = "MIT"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
aiofiles = "^24.1.0"
aiohttp = "^3.11.10"
tqdm = "^4.67.1 "
rich = "^13.9.4"
yarl = "^1.18.3"
pydantic = "^2.10.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.0"

[tool.poetry.scripts]
bunkrr-uploader = "bunkrr_uploader.main:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # PEP8 naming conventions
    "TCH",  # flake8-type-checking
    "COM8", # flake8-commas linter
    "RUF",  # RUF specific fixes
    "Q",    # flake8-quotes
]

ignore = [
    "N806",   # Uppercase variables in functions
    "E501",   # Suppress line-too-long, let formatter decide
    "COM812", # missing-trailing-comma
]

[tool.ruff.lint.pydocstyle]
convention = "google"
