[project]
name = "bunkrr-uploader"
authors = [
    {name = "alexmi256"},
    {name = "NTFSvolume"}
]
dependencies = [
    "aiofiles>=24.1.0,<25",
    "aiohttp>=3.11.10,<4",
    "pydantic-settings>=2.7.0,<3",
    "pydantic>=2.10.4,<3",
    "rich>=13.9.4,<14",
    "tqdm>=4.67.1,<5",
    "yarl>=1.18.3,<2"
]
description = "Async Bunkrr uploader"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.13"
version = "0.1.0"

[project.scripts]
bunkrr-uploader = "bunkrr_uploader.main:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "ASYNC",  # async calls that do not await anything or use blocking methods
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "COM8",  # flake8-commas linter
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "FA102",  # future annotations
    "I",  # isort
    "N",  # PEP8 naming conventions
    "PTH",  # use pathlib instead of os
    "Q",  # flake8-quotes
    "RUF",  # RUF specific fixes
    "T20",  # flake8-print
    "TC",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
    "W"  # pycodestyle warnings
]
extend-safe-fixes = [
    "TC"  # move import from and to TYPE_CHECKING blocks
]
ignore = [
    "COM812",  # missing-trailing-comma
    "E501",  # suppress line-too-long, let formatter decide
    "N806"  # uppercase variables in functions
]
unfixable = [
    "ERA"  # do not autoremove commented out code
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = [
    "E402",  # imports not at the top of the file.
    "T20"  # flake8-print
]
"__init__.py" = ["E402"]  # imports not at the top of the file.

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
sort_first = ["name", "project", "select", "tool"]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1,<5",
    "ruff>=0.8.0,<0.9"
]
